<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/material_dynamic_tertiary50"
            android:gravity="center"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="24pt" />

        <Space android:layout_height="wrap_content" android:layout_width="match_parent"
            android:layout_weight="4">
        </Space>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/material_dynamic_primary60"
            android:gravity="center"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="24pt" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/material_dynamic_secondary60"
            android:gravity="center"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="24pt" />
</LinearLayout>